--- a/gitops-repo/applications/nginx-app.yaml
+++ b/gitops-repo/applications/nginx-app.yaml
@@ -1,18 +1,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-app
+  name: nginx-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/Olga-Galsan/US-Mobile-project.git
     targetRevision: main
-    path: helm/sample-app
+    path: nginx-app
+    helm:
+      valueFiles:
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: default
   syncPolicy:
     automated:
-      selfHeal: true
       prune: true
+      selfHeal: true
