--- a/gitops-repo/applications/nginx-app.yaml
+++ b/gitops-repo/applications/nginx-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/Olga-Galsan/US-Mobile-project.git
     targetRevision: main
-    path: nginx-app
+    path: gitops-repo/nginx-app
     helm:
       valueFiles:
         - values.yaml
