--- a/gitops-repo/nginx-app/values.yaml
+++ b/gitops-repo/nginx-app/values.yaml
@@ -80,11 +80,11 @@ resources: {}
 #     path: /
 #     port: http
 
-# autoscaling:
-#   enabled: false
-#   minReplicas: 1
-#   maxReplicas: 100
-#   targetCPUUtilizationPercentage: 80
+autoscaling:
+  enabled: false
+  # minReplicas: 1
+  # maxReplicas: 3
+  # targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
