--- a/gitops-repo/nginx-app/values.yaml
+++ b/gitops-repo/nginx-app/values.yaml
@@ -43,8 +43,8 @@ service:
   type: ClusterIP
   port: 80
 
-# ingress:
-#   enabled: false
+ingress:
+  enabled: false
 #   className: ""
 #   annotations: {}
     # kubernetes.io/ingress.class: nginx
