Add service account for nginx-app

--- a/gitops-repo/nginx-app/templates/deployment.yaml
+++ b/gitops-repo/nginx-app/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      # serviceAccountName: {{ include "nginx-app.serviceAccountName" . }}
+      serviceAccountName: {{ include "nginx-app.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
