--- a/helm/sample-app/templates/deployment.yaml
+++ b/helm/sample-app/templates/deployment.yaml
@@ -1,3 +1,23 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: {{ .Chart.Name }}
+# spec:
+#   replicas: {{ .Values.replicaCount }}
+#   selector:
+#     matchLabels:
+#       app: {{ .Chart.Name }}
+#   template:
+#     metadata:
+#       labels:
+#         app: {{ .Chart.Name }}
+#     spec:
+#       containers:
+#       - name: {{ .Chart.Name }}
+#         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+#         ports:
+#         - containerPort: 80
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,3 +37,16 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         ports:
         - containerPort: 80
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 10
+
