--- a/gitops-repo/applications/sample-app.yaml
+++ b/gitops-repo/applications/sample-app.yaml
@@ -9,6 +9,9 @@ spec:
     repoURL: https://github.com/Olga-Galsan/US-Mobile-project.git
     targetRevision: main
     path: helm/sample-app
+    helm:
+      valueFiles:
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: default
